# FSDL-2022-Semantic-Search-QA

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pre-commit.yml
notebooks/: example.ipynb
notebooks/samt/: QA-Datasets_exploration.ipynb  SECDownloader.py  Visualize Jina Flow.ipynb  finbert-qa_inference_exploration.ipynb  jina_exploration.ipynb  keys.json  processing.py  wandb_login_download_exploration.ipynb  wandb_model_upload.ipynb
notebooks/samt/QA-datasets/: README.md
project_tasks/: lint.sh
src/semantic_search_qa/: python_env.py  utils.py
src/semantic_search_qa/server/: server.yml  server_utils.py  simple_client.py
src/semantic_search_qa/server/classifier/: classifier_exec.py  config.yml  requirements.txt
src/semantic_search_qa/server/doc_chunker/: config.yml  doc_chunker_exec.py  doc_sentencizer_exec.py  server_utils.py  utils.py
src/semantic_search_qa/server/doc_cleaner/: config.yml  doc_cleaner_exec.py
src/semantic_search_qa/server/doc_sentencizer/: config.yml  doc_sentencizer_exec.py  requirements.txt
src/semantic_search_qa/server/merger/: config.yml  merger_exec.py
src/semantic_search_qa/server/qa/: config.yml  qa_exec.py  requirements.txt
src/semantic_search_qa/server/query_generator/: config.yml  query_generator_exec.py  query_generator_exec.py~  requirements.txt
src/semantic_search_qa/server/ranker/: config.yml  ranker_exec.py  requirements.txt
src/semantic_search_qa/ui/: 01_main.py  ui_utils.py  utils.py
src/semantic_search_qa/ui/pages/: 02_user_feedback.py  03_extras.py
tests/: test_utils.py
