[tool.poetry]
name = "fsdl-2022-semantic-search-qa"
version = "0.1.0"
description = ""
authors = ["Various Authors"]
readme = "README.md"
packages = [{include = "semantic_search_qa", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"  # this is because the streamlit version
datasets = "^2.4.0"
pandas = "^1.4.4"
pytorch-lightning = "^1.7.5"
streamlit = "^1.12.2"
transformers = "^4.21.3"
ipykernel = "^6.15.2"
jina = "v3.8.0"
"pdfminer.six" = "^20220524"
protobuf = "3.19.4"                    # required by wandb. Older version b.c. OSX bug with latest protobuf...
wandb = "^0.13.3"
sentencepiece = "^0.1.97"
pdfkit = "^1.0.0"
selenium = "^4.5.0"
webdriver-manager = "^3.8.3"
whylogs = "^1.1.7"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"
shellcheck-py = "^0.8.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
autoflake = "^1.5.3"
jupyter = "^1.0.0"
jupyterlab = "^3.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py39"]
